--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,14 +2,12 @@ FROM python:3.12
 
 WORKDIR /app
 
-ENV POETRY_VERSION=1.8.0
+ENV POETRY_VERSION=1.8.2
 ENV POETRY_HOME=/opt/poetry
-ENV POETRY_VIRTUALENVS_IN_PROJECT=true
+ENV POETRY_VIRTUALENVS_CREATE=false
+ENV POETRY_NO_INTERACTION=1
 
-RUN apt-get update && apt-get install -y curl
-
-RUN curl -sSL https://install.python-poetry.org | python3 - \
-    && ln -s $POETRY_HOME/bin/poetry /usr/local/bin/poetry
+RUN pip install poetry==$POETRY_VERSION
 
 COPY poetry.lock pyproject.toml /app/
 
