--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+sqlalchemy = "^2.0.30"
+alembic = "^1.13.1"
+pydantic-settings = "^2.2.1"
+psycopg2-binary = "^2.9.9"
+pydantic = "^2.7.1"
+pylint = "^3.2.1"
 
 
 [build-system]
