--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pydantic-settings = "^2.2.1"
 psycopg2-binary = "^2.9.9"
 pydantic = "^2.7.1"
 pylint = "^3.2.1"
+beautifulsoup4 = "^4.12.3"
+httpx = "^0.27.0"
+lxml = "^5.2.2"
 
 
 [build-system]
