feat: add rutube async parser and logger

--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,7 @@ DB_USER='postgres'
 DB_PASSWORD='postgres'
 
 RUTUBE_URL='https://rutube.ru'
+RUTUBE_VIDEO_PAGINATION_URL='https://rutube.ru/api/video/person/%d/?page='
+RUTUBE_VIDEOS_PER_PAGE=20
+
+APP_LOGFILE='app.log'
