feat: add logging if status_code other then 200

--- a/.pylintrc
+++ b/.pylintrc
@@ -441,6 +441,7 @@ disable=raw-checker-failed,
         missing-function-docstring,
         too-few-public-methods,
         broad-exception-raised,
+        logging-fstring-interpolation,
         too-many-locals
 
 # Enable the message, report, category or checker with the given id(s). You can
