--- a/.pylintrc
+++ b/.pylintrc
@@ -442,6 +442,7 @@ disable=raw-checker-failed,
         too-few-public-methods,
         broad-exception-raised,
         logging-fstring-interpolation,
+        duplicate-code,
         too-many-locals
 
 # Enable the message, report, category or checker with the given id(s). You can
