--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,8 @@ RUTUBE_VIDEO_PAGINATION_URL='https://rutube.ru/api/video/person/%d/?page='
 RUTUBE_VIDEOS_PER_PAGE=20
 
 APP_LOGFILE='app.log'
+
+BOT_TOKEN=''
+BOT_PAGE_SIZE=10
+BOT_FORWARDS='🌛'
+BOT_BACKWARDS='🌜'
