--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ httpx = "^0.27.0"
 lxml = "^5.2.2"
 demjson3 = "^3.0.6"
 aiogram = "^3.6.0"
+celery = "^5.4.0"
+redis = "^5.0.4"
 
 
 [build-system]
