feat: update according to pylint

--- a/.pylintrc
+++ b/.pylintrc
@@ -440,10 +440,14 @@ disable=raw-checker-failed,
         missing-module-docstring,
         missing-function-docstring,
         too-few-public-methods,
+        broad-exception-caught,
+        unused-private-member,
         broad-exception-raised,
         logging-fstring-interpolation,
         duplicate-code,
-        too-many-locals
+        too-many-locals,
+        wrong-import-position,
+        redefined-outer-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
