feat: refactor docker

--- a/.env.dist
+++ b/.env.dist
@@ -7,8 +7,9 @@ DB_PASSWORD='postgres'
 RUTUBE_URL='https://rutube.ru'
 RUTUBE_VIDEO_PAGINATION_URL='https://rutube.ru/api/video/person/%d/?page='
 RUTUBE_VIDEOS_PER_PAGE=20
+RUTUBE_TIMEOUT=60.0
 
-APP_LOGFILE='app.log'
+APP_LOGFILE='/var/log/myapp/bot_app.log'
 
 BOT_TOKEN=''
 BOT_PAGE_SIZE=10
