fix: fix greetings text

--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,7 @@ APP_LOGFILE='/var/log/myapp/bot_app.log'
 
 BOT_TOKEN=''
 BOT_PAGE_SIZE=10
-BOT_FORWARDS='🌛'
-BOT_BACKWARDS='🌜'
+BOT_FORWARDS='🌜'
+BOT_BACKWARDS='🌛'
 
 REDIS_URL='redis://redis:6379/0'
